lined out team name on teams page with first column and made soccer have 11 players and nfl 9

--- a/markup/_layouts/_content/my-teams-content-soccer.jade
+++ b/markup/_layouts/_content/my-teams-content-soccer.jade
@@ -45,18 +45,6 @@ section.nl-section.nl-my-teams.soccer
 
                                     tbody
                                         tr
-                                            td
-                                            td Player name
-                                            td.pos D
-                                            td 30
-                                            td $0
-                                        tr
-                                            td
-                                            td Player name
-                                            td.pos D
-                                            td 30
-                                            td $0
-                                        tr
                                             td.indicated
                                                 span.played.indicator
                                             td Player name
@@ -85,6 +73,34 @@ section.nl-section.nl-my-teams.soccer
                                             td $0
                                         tr
                                             td
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                        tr
+                                            td.indicated
+                                                span.not-playing.indicator
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                        tr
+                                            td.indicated
+                                                span.playing.indicator
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                        tr
+                                            td.indicated
+                                                span.not-playing.indicator
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                        tr
+                                            td.indicated
+                                                span.playing.indicator
                                             td Player name
                                             td.pos D
                                             td 30
@@ -199,6 +215,21 @@ section.nl-section.nl-my-teams.soccer
                                         td.pos D
                                         td 30
                                         td $0
+                                    tr
+                                        td.indicated
+                                            span.not-playing.indicator
+                                        td Player name
+                                        td.pos D
+                                        td 30
+                                        td $0
+                                    tr
+                                        td.indicated
+                                            span.playing.indicator
+                                        td Player name
+                                        td.pos D
+                                        td 30
+                                        td $0
+
                     .row
                         .col-12
                             div.nl-team-card-footer
@@ -294,6 +325,21 @@ section.nl-section.nl-my-teams.soccer
                                         td.pos D
                                         td 30
                                         td $0
+                                    tr
+                                        td.indicated
+                                            span.not-playing.indicator
+                                        td Player name
+                                        td.pos D
+                                        td 30
+                                        td $0
+                                    tr
+                                        td.indicated
+                                            span.playing.indicator
+                                        td Player name
+                                        td.pos D
+                                        td 30
+                                        td $0
+
                     .row
                         .col-12
                             div.nl-team-card-footer
@@ -389,6 +435,21 @@ section.nl-section.nl-my-teams.soccer
                                         td.pos D
                                         td 30
                                         td $0
+                                    tr
+                                        td.indicated
+                                            span.not-playing.indicator
+                                        td Player name
+                                        td.pos D
+                                        td 30
+                                        td $0
+                                    tr
+                                        td.indicated
+                                            span.playing.indicator
+                                        td Player name
+                                        td.pos D
+                                        td 30
+                                        td $0
+
                     .row
                         .col-12
                             div.nl-team-card-footer
