--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -121,7 +121,7 @@
     .title{
       font-weight: 400;
       color: #fff;
-      margin-left: calculateRem(5px);
+      margin-left: 2.3125rem;
     }
   }
 
