Removed unused classes

--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -30,13 +30,13 @@ section.nl-section.nl-players.nl-live-score
 			div.col-sm-12.page-heading
 				h1 Live scores
 		div.row
-			div.col-sm-12.col.col-lg-6.col-xl-8
+			div.col-sm-12.col-lg-6.col-xl-8
 				h6.d-inline-block Matches
 				div.matches
 					div.matches__scrollarea
 						+repeat(12)
 
-			div.col-sm-12.col.col-lg-6.col-xl-4
+			div.col-sm-12.col-lg-6.col-xl-4
 				h6.d-inline-block My current contests
 				a.btn.btn-primary.btn-sm.btn-inline Refresh
 				div.current-contents
