Update info icon color and position

--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -708,8 +708,7 @@ button:focus {
 
   i {
     font-size: 24px;
-    color: #e89708;
-    padding-left: 20px;
+    color: #ffffff;
   }
 
   @include respond-to(tablets) {
