--- a/markup/_layouts/_content/my-teams-content-soccer.jade
+++ b/markup/_layouts/_content/my-teams-content-soccer.jade
@@ -7,21 +7,6 @@ section.nl-section.nl-my-teams.soccer
             div.col-md-12
                 a(href="create_team.html") 
                     div.btn.btn-primary.btn-lg.btn-create-team Create team
-        div.row
-            div.col-md-8
-                div.nl-status-wrapper
-                    ul
-                        li
-                            span.playing.indicator
-                            span Playing
-                        li
-                            span.played.indicator
-                            span Played
-                        li
-                            span.not-playing.indicator
-                            span Not Playing
-            div.col-md-4.nl-tar
-                div.btn.btn-primary.nl-m-b-225 Create helmet
 
         div.row.nl-m-b-25
             div.col-12.col-md-6.col-lg-6.col-xl-3
@@ -30,7 +15,7 @@ section.nl-section.nl-my-teams.soccer
                         .col-12
                             div.nl-team-card.table-data-field
                                 
-                                span.title Team name NLC2
+                                p Team name NLC2
 
                     .row
                         .col-12
@@ -141,7 +126,7 @@ section.nl-section.nl-my-teams.soccer
                         .col-12
                             div.nl-team-card.table-data-field
                                 
-                                span.title Team name NLC2
+                                p Team name NLC2
                                
 
                     .row
@@ -251,7 +236,7 @@ section.nl-section.nl-my-teams.soccer
                         .col-12
                             div.nl-team-card.table-data-field
                                 
-                                span.title Team name NLC2
+                                p Team name NLC2
                                
 
                     .row
@@ -361,7 +346,7 @@ section.nl-section.nl-my-teams.soccer
                         .col-12
                             div.nl-team-card.table-data-field
                                 
-                                span.title Team name NLC2
+                                p Team name NLC2
                                
 
                     .row
