--- a/markup/_scss/base/_base.scss
+++ b/markup/_scss/base/_base.scss
@@ -54,7 +54,8 @@ body {
 .nl-tar{
   text-align: right;
   @include respond-to(allsmall){
-    text-align: center;
+    //text-align: center;
+    text-align: left;
   }
 }
 
