--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -9133,7 +9133,7 @@ body {
   text-align: right; }
   @media (max-width: 991px) {
     .nl-tar {
-      text-align: center; } }
+      text-align: left; } }
 
 .nl-m-b-225 {
   margin-bottom: 2.25rem; }
@@ -9366,6 +9366,10 @@ p {
   font-size: 28px;
   font-size: 1.75rem;
   margin-bottom: 0.625rem; }
+
+@media (max-width: 991px) {
+  .nl-team-card.table-data-field h3 {
+    font-size: 1.3rem; } }
 
 .loader {
   background: none repeat scroll 0 0 #ffffff;
@@ -10805,6 +10809,9 @@ p {
 .soccer.nl-section {
   padding: 2.5rem 3.25rem; }
 
+.soccer .nl-team-card.table-data-field {
+  padding: 1.625rem 0.625rem; }
+
 .nl-my-teams {
   background: url(../img/stadion_detail.jpg) top center no-repeat fixed;
   background-size: cover;
@@ -10816,8 +10823,12 @@ p {
       padding-left: 1.875rem;
       padding-right: 1.875rem; } }
   .nl-my-teams .btn-create-team {
-    font-size: 2.0625rem;
-    margin: 2.25rem 0 2.25rem; }
+    font-size: 1.125rem;
+    margin: 1.25rem 0 1.25rem; }
+    @media only screen and (max-width: 575px) {
+      .nl-my-teams .btn-create-team {
+        padding-left: 1.1rem;
+        padding-right: 1.1rem; } }
   .nl-my-teams .nl-m-b-14 {
     margin-bottom: 0.475rem; }
   .nl-my-teams .nl-card-wrapper {
@@ -10900,8 +10911,10 @@ p {
     .nl-my-teams .nl-team-card p {
       color: #e89708;
       text-transform: uppercase;
-      font-weight: 700;
-      margin-bottom: 0; }
+      font-weight: 400;
+      margin-bottom: 0;
+      color: white;
+      margin-left: 2.351rem; }
     .nl-my-teams .nl-team-card .title {
       font-weight: 400;
       color: #fff;
@@ -11100,6 +11113,9 @@ p {
     background-size: 100% 100%; }
     .nl-team-field.football .nl-player-block img {
       max-width: 115px; }
+      @media only screen and (min-width: 992px) and (max-width: 1200px) {
+        .nl-team-field.football .nl-player-block img {
+          max-width: 90px; } }
   @media (max-width: 991px) {
     .nl-team-field {
       display: none; } }
@@ -11807,6 +11823,14 @@ p {
   .nl-table-responsive {
     overflow-x: auto; } }
 
+@media (max-width: 1200px) {
+  .nl-enter-contests .player-main-block.football {
+    min-height: 418px; } }
+
+.nl-enter-contests #dropdownMenuButton {
+  width: 100%;
+  margin-bottom: 20px; }
+
 .nl-enter-contests .heading-search__header {
   margin-bottom: 0;
   padding: 1.5rem 0; }
@@ -11831,21 +11855,10 @@ p {
   text-align: center;
   padding: 1.25rem; }
   .nl-enter-contests .table-heading h5 {
-    margin-bottom: 0.875rem;
+    margin-bottom: 1.875rem;
     color: #fff; }
   .nl-enter-contests .table-heading .btn-primary {
-    font-size: 1.8rem; }
-
-@media (max-width: 768px) {
-  .nl-enter-contests #dropdownMenuButton {
-    width: 100%;
-    margin-bottom: 1.5rem;
-    text-align: left; }
-  .nl-enter-contests .dropdown-toggle::after {
-    position: absolute;
-    top: 25%;
-    right: 0.5rem;
-    color: #e48706; } }
+    font-size: 1.4rem; }
 
 @media (max-width: 767px) {
   .nl-team-info,
