--- a/markup/_layouts/_content/enter_contests_content.jade
+++ b/markup/_layouts/_content/enter_contests_content.jade
@@ -1,16 +1,19 @@
-section.nl-section.nl-players.nl-enter-contests
+section.nl-section.nl-players.nl-enter-contests.soccer
 	div.container.container-narrow
 		div.row
 			div.col-md-12.col-lg-6
 				div.heading-search
-					h1.heading-search__header Teams
-					div.heading-search__search
-						div.dropdown
-							button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Select your team
-							div.dropdown-menu(aria-labelledby="dropdownMenuButton")
-								a.dropdown-item Team A
-								a.dropdown-item Team B
-								a.dropdown-item Team C
+					h1.heading-search__header Enter contest
+					div.row
+						div.col-md-4.col-lg-3
+						div.heading-search__search.col-md-4.col-lg-6
+							div.dropdown
+								button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Select your team
+								div.dropdown-menu(aria-labelledby="dropdownMenuButton")
+									a.dropdown-item Team A
+									a.dropdown-item Team B
+									a.dropdown-item Team C
+						div.col-md-4.col-lg-3
 
 				div.nl-team-info
 					div.nl-team-name your team
@@ -179,7 +182,6 @@ section.nl-section.nl-players.nl-enter-contests
 											td.pos ST
 											td 30
 											td $0
-
 			div.col-md-12.col-lg-6
 				div.nl-contest-info-title
 					h1.heading-search__header Contest information
@@ -211,13 +213,11 @@ section.nl-section.nl-players.nl-enter-contests
 								td
 									div.leaders-list
 										p.tit First Game
-										p Goals for Everyone
+										p 19-07-2017 08:25 AM
 										p.tit Week
 										p 3
 										p.tit Prize money
 										p 1.000 NLC
-										p.tit
-										button.btn.btn-primary Payout
 								td
 									div.leaders-list
 										p.tit Last game
@@ -269,3 +269,8 @@ section.nl-section.nl-players.nl-enter-contests
 									td Username
 									td MyTeamName
 									td 37.90
+					table.table.table-info3
+						thead
+							tr
+								th 
+									button.btn.btn-primary Payout
