--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -4,24 +4,13 @@ section.nl-section.nl-my-teams
             div.col-md-12
                 h1 My teams
         div.row
-            div.col-md-12
+            div.col-6.col-sm-6.col-md-6.col-lg-8
                 a(href="create_team_football.html") 
                     div.btn.btn-primary.btn-lg.btn-create-team Create team
-        div.row
-            div.col-md-8
-                div.nl-status-wrapper
-                    ul
-                        li
-                            span.playing.indicator
-                            span Playing
-                        li
-                            span.played.indicator
-                            span Played
-                        li
-                            span.not-playing.indicator
-                            span Not Playing
-            div.col-md-4.nl-tar
-                div.btn.btn-primary.nl-m-b-225 Create helmet
+
+            div.col-6.col-sm-6.col-md-6.col-lg-4.nl-tar
+                a(href="#") 
+                    div.btn.btn-primary.btn-lg.btn-create-team Create Helmet
 
         div.row.nl-m-b-25
             div.col-12.col-md-6.col-lg-6.col-xl-3
@@ -29,8 +18,7 @@ section.nl-section.nl-my-teams
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                p
-                                    span.title team NLC2
+                                p team NLC2
                                 <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
 
                     .row
@@ -125,8 +113,7 @@ section.nl-section.nl-my-teams
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                p
-                                    span.title team NLC2
+                                p team NLC2
                                 <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
                     .row
@@ -220,8 +207,7 @@ section.nl-section.nl-my-teams
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                p
-                                    span.title team NLC2
+                                p team NLC2
                                 <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
                     .row
@@ -315,8 +301,7 @@ section.nl-section.nl-my-teams
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                p
-                                    span.title team NLC2
+                                p team NLC2
                                 <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
                     .row
