--- a/markup/_layouts/_content/enter_contests_content.jade
+++ b/markup/_layouts/_content/enter_contests_content.jade
@@ -37,7 +37,7 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 				div.nl-team-button
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
 					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
-				div.nl-team-field
+				div.nl-team-field.soccer
 					div.striker-line
 					div.midfielder-line
 					div.defender-line
