--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -15,6 +15,7 @@
 	.heading-search__header {
 		margin-bottom: 0;
 		padding: 1.5rem 0;
+    text-align: center;
 
     @media (max-width: 768px) {
       margin-left: 0;
