--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -3,7 +3,7 @@ div.homepage-fieldpage
 		div.col-md-12
 			h5 My teams
 	div.row.nl-no-wrap.field-dropdown
-		div.col-lg-12.nl-team-600
+		div.col-lg-12
 			.dropdown
 				button.btn.btn-primary(type='button', data-toggle='dropdown') FantasyFootballGod
 					i.fa.fa-caret-down
