--- a/markup/_layouts/_content/_homepage/upcoming_contest.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest.jade
@@ -1,4 +1,4 @@
-div.row.align-items-center
+div.row.align-items-center.upcoming-contests
     div.col-md-12
         h5 upcoming contests
 
@@ -20,7 +20,7 @@ div.row
             div.tab-content
                 div.tab-pane.active(id="all" role="tabpanel")
                     div.nl-table-responsive
-                        div.nl-table-mw
+                        div.nl-table-mw.homepage-contest-content
                             table.table.table-striped
                                 thead
                                     tr
