Remove highlight on dropdown menu hover

--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -506,3 +506,9 @@ script(type='text/javascript').
         $("h5.text-center.visible-xxs.subtitle span.week").html($(this).text());
         $('#weekModal').modal('hide');
     });
+    $("ul#dropdown-in-week").hover(function(){
+        $("button.btn.btn-primary").css( "box-shadow", "none" );
+    });
+
+    
+
