--- a/markup/_layouts/_content/_homepage/top5-player.jade
+++ b/markup/_layouts/_content/_homepage/top5-player.jade
@@ -247,3 +247,6 @@ script(type='text/javascript').
 		$("h5.text-center.visible-xxs.subtitle.position span").html($(this).text());
 		$('#playerModal').modal('hide');
 	});
+	$("ul#dropdown-in-player").hover(function(){
+		$("button.btn.btn-primary").css( "box-shadow", "none" );
+	});
